--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,16 @@
     <div class="top">
     </div>
     <div class="wrapper">
-        <div id="top-text"></div>
+        <div class="welcome">
+            <div style="flex: 1"></div>
+            <span id="user-name"></span>
+            <div id="email"></div>
+        </div>
+        <div style="flex-basis: 10px"></div>
+        <div class="events row">
+            <span id="num-events"></span> events between <span id="start-time"></span> and <span id="end-time"></span>
+        </div>
+        <div style="flex-basis: 10px"></div>
         <div id="buttons"></div>
     </div>
     <script>require('./chooser.js')</script>
