a way to get home

--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,12 @@
 </head>
 <body>
     <div class="top">
+        <div class="spring"></div>
+        <button id="home">back</button>
     </div>
     <div class="wrapper">
         <div class="welcome">
-            <div style="flex: 1"></div>
+            <div class="spring"></div>
             <span id="user-name"></span>
             <div id="email"></div>
         </div>
