mute button and paste link

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
 <body>
     <div class="top">
         <div class="spring"></div>
+        <button id="mute">mute</button>
         <button id="home">back</button>
     </div>
     <div class="wrapper">
@@ -17,6 +18,7 @@
         <div class="events row">
             <span id="num-events"></span> events between <span id="start-time"></span> and <span id="end-time"></span>
         </div>
+        <input placeholder="Paste a hangouts link to load" id="input">
         <div style="flex-basis: 10px"></div>
         <div id="buttons"></div>
     </div>
